examples/pure/errors/type-mismatch.sme
proc test ()
    const a: i100 = 0;
    var b: i2 = 0;
{
    b = a;
}

network i () {
    instance _ of test ();
}
